@@ -1,50 +1,0 @@
-﻿using Microsoft.Xna.Framework;
-using Roguelike.Common.Mode.RoguelikeMode.RoguelikeChange.ItemOverhaul;
-using Roguelike.Common.Utils;
-using Roguelike.Contents.Items.Weapon.MeleeSynergyWeapon.EverlastingCold;
-using Terraria;
-using Terraria.ID;
-using Terraria.ModLoader;
-
-namespace Roguelike.Contents.Items.aDebugItem;
-internal class TestAnimationSwingMeleeSword : ModItem {
-	public override string Texture => ModUtils.GetTheSameTextureAsEntity<EverlastingCold>();
-	public override void SetDefaults() {
-		Item.BossRushSetDefault(92, 92, 120, 5f, 20, 20, ItemUseStyleID.Swing, true);
-		Item.DamageType = DamageClass.Melee;
-		Item.UseSound = SoundID.Item1;
-		if (Item.TryGetGlobalItem(out MeleeWeaponOverhaul system)) {
-			system.Ignore_AttackSpeed = true;
-			system.AnimationEndTime = 25;
-			system.SwingDegree = 155;
-			system.SwingStrength = 7f;
-			system.SwingType = BossRushUseStyle.SwipeDown;
-		}
-	}
-	public override void UseStyle(Player player, Rectangle heldItemFrame) {
-			float rotation = MathHelper.ToRadians(50) * player.direction;
-		if (player.itemAnimation <= 5) {
-			player.itemRotation = Item.GetGlobalItem<MeleeWeaponOverhaul>().RotationAfterMainAnimationEnd + rotation;
-			player.SetCompositeArmFront(true, Player.CompositeArmStretchAmount.Full, player.itemRotation - MathHelper.PiOver2 - (player.direction > 0 ? MathHelper.PiOver4 : MathHelper.PiOver4 * 3));
-			player.itemLocation = player.GetFrontHandPosition(Player.CompositeArmStretchAmount.Full, player.itemRotation - MathHelper.PiOver2 - (player.direction > 0 ? MathHelper.PiOver4 : MathHelper.PiOver4 * 3)) + Vector2.UnitX.RotatedBy(player.itemRotation);
-			return;
-		}
-		if (player.itemAnimation <= 25) {
-			player.itemRotation = Item.GetGlobalItem<MeleeWeaponOverhaul>().RotationAfterMainAnimationEnd + rotation * (1 - (player.itemAnimation - 5) / 20f);
-			player.SetCompositeArmFront(true, Player.CompositeArmStretchAmount.Full, player.itemRotation - MathHelper.PiOver2 - (player.direction > 0 ? MathHelper.PiOver4 : MathHelper.PiOver4 * 3));
-			player.itemLocation = player.GetFrontHandPosition(Player.CompositeArmStretchAmount.Full, player.itemRotation - MathHelper.PiOver2 - (player.direction > 0 ? MathHelper.PiOver4 : MathHelper.PiOver4 * 3)) + Vector2.UnitX.RotatedBy(player.itemRotation);
-		}
-	}
-	public override void ModifyItemScale(Player player, ref float scale) {
-		//if (player.itemAnimation <= 20) {
-		//	float progress;
-		//	if (player.itemAnimation <= 10) {
-		//		progress = player.itemAnimation / 20f;
-		//	}
-		//	else {
-		//		progress = 1 - player.itemAnimation / 20f;
-		//	}
-		//	scale -= progress * 1.5f;
-		//}
-	}
-}
